--- a/public/styles.css
+++ b/public/styles.css
@@ -52,7 +52,7 @@ header {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid black;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .post {
